# kgka_Music_hl_automotive

./: .gitignore  README.md  api.json  build_apk.bat  flutter_rust_bridge.yaml  lyrics_log.txt  playlist_detail_page.dart  pubspec.yaml  update.md
android/: gradle.properties
android/app/: build.gradle.kts
docs/superpowers/plans/: 2026-07-23-playback-state-persistence.md
docs/superpowers/specs/: 2026-07-23-playback-state-persistence-design.md
ios/Runner/: AppDelegate.swift  Info.plist  LoudnessAnalyzer.swift  LoudnessChannel.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: app_config.dart
lib/controllers/: auth_controller.dart  download_controller.dart  local_music_controller.dart  player_controller.dart  theme_controller.dart
lib/core/: api_client.dart  api_client_interface.dart  rust_api_client.dart
lib/models/: music_models.dart
lib/services/: app_update_service.dart  audio_effects_service.dart  cache_service.dart  desktop_lyrics_service.dart  device_info_service.dart  download_service.dart  loudness_service.dart  lyric_converter.dart  music_api.dart  music_audio_handler.dart  playback_history_service.dart  playback_stats_service.dart  search_history_service.dart  vip_background_task.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/ui/: adaptive_layout.dart  app_theme.dart
lib/ui/pages/: about_page.dart  album_shop_page.dart  app_shell.dart  artist_detail_page.dart  audio_interruption_settings_page.dart  cloud_drive_page.dart  comment_page.dart  desktop_lyrics_settings_page.dart  downloaded_songs_page.dart  home_page.dart  library_page.dart  local_songs_page.dart  rank_page.dart  (+8 more)
linux/runner/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
rust/: Cargo.toml
rust/src/: api.rs  engine.rs  error.rs  frb_generated.rs  lib.rs
rust/src/kugou/: api_response.rs  config.rs  crypto.rs  mod.rs  models.rs  request.rs  session.rs  session_store.rs  signer.rs  transport.rs
rust/src/services/: album.rs  artist.rs  comment.rs  discover.rs  external_playlist.rs  fm.rs  login.rs  lyric.rs  media_catalog.rs  mod.rs  playlist.rs  rank.rs  register.rs  report.rs  search.rs  song.rs  user.rs  youth.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+20 files in other folders)
